--- a/.github/workflows/zimage_patcher.yml
+++ b/.github/workflows/zimage_patcher.yml
@@ -33,3 +33,9 @@ jobs:
       run: |
         wget -q https://raw.githubusercontent.com/AndroidDump/xiaomi_olivelite_dump/olivelite-user-10-QKQ1.191014.001-V11.0.2.0.QCPINXM-release-keys/boot.img
         python ./main.py boot.img
+    - name: Upload AB GSI Images
+      uses: actions/upload-artifact@v2
+      with:
+      *.img
+      if-no-files-found: error
+      
