--- a/.github/workflows/zimage_patcher.yml
+++ b/.github/workflows/zimage_patcher.yml
@@ -36,6 +36,6 @@ jobs:
     - name: Upload AB GSI Images
       uses: actions/upload-artifact@v2
       with:
-      *.img
+      patcher-oss
       if-no-files-found: error
       
